# snakemake-storage-plugin-http

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_storage_plugin_http/: __init__.py
tests/: tests.py
