[tool.poetry]
name = "snakemake-storage-plugin-http"
version = "0.1.0"
description = "Snakemake storage plugin for donwloading input files from HTTP(s)."
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
snakemake-interface-common = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.3.1"}
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
