[tool.poetry]
name = "snakemake-storage-plugin-http"
version = "0.1.0"
description = "Snakemake storage plugin for donwloading input files from HTTP(s)."
authors = [
    "Johannes Koester <johannes.koester@uni-due.de>",
    "Christopher Tomkins-Tinch <tomkinsc@broadinstitute.org>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
snakemake-interface-common = "^1.10.0"
snakemake-interface-storage-plugins = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.3.1"}
flake8 = "^4.0.1"
flake8-bugbear = "^23.3.12"
pytest = "^7.0"
snakemake = {git="https://github.com/snakemake/snakemake.git", branch="feat/storage-plugins"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
