[tool.poetry]
name = "snakemake-storage-plugin-http"
version = "0.2.1"
description = "Snakemake storage plugin for donwloading input files from HTTP(s)."
authors = [
    "Johannes Koester <johannes.koester@uni-due.de>",
    "Christopher Tomkins-Tinch <tomkinsc@broadinstitute.org>"
]
readme = "README.md"
homepage = "https://github.com/snakemake/snakemake-storage-plugin-http"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
snakemake-interface-common = "^1.10.0"
snakemake-interface-storage-plugins = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^7.3.2"}
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pytest = "^7.0"
snakemake = {git="https://github.com/snakemake/snakemake.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
